# rag1

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: chat.py  config.py  document.py  memory.py  search.py  system.py
backend/app/database/: milvus.py  mysql.py  redis.py
backend/app/models/: base.py  document.py  memory.py
backend/app/services/: document_processor.py  embedding_service.py
backend/app/utils/: document_parser.py
docs/: index.md
docs/api/: documents.md
docs/architecture/: overview.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: Configuration.tsx  Dashboard.tsx  DocumentManager.tsx
frontend/src/styles/: globals.css
