[tool.poetry]
name = "rag-backend"
version = "0.1.0"
description = "RAG System Backend API"
authors = ["hermes <hermes@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
pymysql = "^1.1.0"
redis = "^5.0.3"
pymilvus = "^2.3.7"
transformers = "^4.39.3"
torch = "^2.2.2"
sentence-transformers = "^2.7.0"
bce-embedding = "^0.1.3"
python-multipart = "^0.0.9"
python-magic = "^0.4.27"
PyMuPDF = "^1.24.0"
python-docx = "^1.1.2"
openpyxl = "^3.1.2"
python-pptx = "^0.6.23"
Markdown = "^3.6"
beautifulsoup4 = "^4.12.3"
markitdown = "^0.0.1"
paddleocr = "^2.7.3"
pillow = "^10.3.0"
numpy = "^1.26.4"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
celery = {extras = ["redis"], version = "^5.4.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
